# Thesis

./: .gitattributes
Source_BNN_PYNQ/bnn/: __init__.py
Source_BNN_PYNQ/bnn/src/test_train/: cnv.py  quantized_net.py
report - slide/report/: report.aux  report.lof  report.lot  report.out  report.tex  report.tex~txs0  report.tex~txs1  report.tex~txs10  report.tex~txs11  report.tex~txs12  report.tex~txs13  report.tex~txs14  report.tex~txs15  report.tex~txs16  report.tex~txs17  report.tex~txs18  report.tex~txs19  report.tex~txs2  report.tex~txs20  report.tex~txs21  report.tex~txs3  report.tex~txs4  report.tex~txs5  report.tex~txs6  report.tex~txs7  report.tex~txs8  report.tex~txs9  report.toc  đồ án 1.toc
report - slide/slide/: ppt.aux  ppt.blg  ppt.nav  ppt.out  ppt.run.xml  ppt.tex  ppt.toc
src/bnn/: bnn.py
src/bnn/src/training/: requirements.txt
src/bnn/src/training/gtsrb/: gtsrb_training.ipynb
src/bnn/src/vitis/: top.cpp
src/bnn/src/vitis/finn/: mmv.hpp  requirements.txt
src/bnn/src/vitis/hw/hw/solution1/.autopilot/db/driver/src/: CMakeLists.txt  Makefile  xblackboxjam.h
src/bnn/src/vitis/sw/: arithmetic_layer.h  average_unpooling_layer.h  dropout_layer.h  foldedmv-offload.h  graph_visualizer.h  input_layer.h  layer.h  layer_factory.h  layer_factory_impl.h  loss_function.h  lrn_layer.h  max_unpooling_layer.h  network.h  node.h  nodes.h  optimizer.h  partial_connected_layer.h  tiny_cnn.h  util.h  weight_init.h
src/bnn/src/weight_conversion/: finnthesizer.py  gtsrb-gen-binary-weights.py
src/notebooks/: Roadsign.ipynb
(+1763 files in other folders)
